# rust-auth-service

./: Cargo.toml
migrations/2023-09-20-184115_create_users/: up.sql
migrations/2023-09-20-184220_create_clients/: up.sql
src/: main.rs  schema.rs
src/core/: database.rs  exceptions.rs  mod.rs
src/core/helpers/: jwt.rs
src/dtos/: client_dtos.rs  mod.rs  user_dtos.rs
src/middlewares/: mod.rs  user_middlewares.rs
src/models/: client.rs  mod.rs  user.rs
src/repositories/: client_repository.rs  mod.rs  user_repository.rs
src/routes/: client_routes.rs  mod.rs  user_routes.rs
src/services/: client_service.rs  mod.rs  user_service.rs
