[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = "2.1.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
bcrypt = "0.15"
chrono = {version = "0.4", features = ["serde"]}
log = "0.4.0"
env_logger = "0.10.0"
futures = "0.3.15"